added forecast html and css

--- a/src/style.css
+++ b/src/style.css
@@ -59,11 +59,12 @@ main {
     color: #f65282;
 }
 .weather-app-icon {
-    font-size: 44px;
-    margin-top: 22px;
+    width: 88px;
+    height: 88px;
+    
 }
 .weather-app-unit {
-    margin-top: 16px;
+    margin-top: 6px;
     font-size: 28px;
 }
 .weather-app-temperature-container {
@@ -74,6 +75,7 @@ main {
     font-size: 88px;
     font-weight: bold;
     margin-left: 10px;
+    line-height: 88px;
 }
 .weather-app-data {
     display:flex;
